--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hardhat": "^2.18.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.0"
+    "@openzeppelin/contracts": "^5.0.0",
+    "hardhat-faucet": "^1.0.0"
   }
 }
